使用 Colab 创建而成

--- a/PPO_colab.ipynb
+++ b/PPO_colab.ipynb
@@ -127,7 +127,7 @@
         "id": "RqGpUFxbe2Gb",
         "outputId": "ca33cc7a-21bc-4e51-850d-a11f58b2034f"
       },
-      "execution_count": 47,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -166,7 +166,7 @@
       "metadata": {
         "id": "F4bX4u9wm0uJ"
       },
-      "execution_count": 48,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -183,7 +183,7 @@
       "metadata": {
         "id": "-g1QmKHRn4_8"
       },
-      "execution_count": 54,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -275,7 +275,7 @@
         "    def act(self, state):\n",
         "\n",
         "        if self.has_continuous_action_space:\n",
-        "            action_mean = self.actor(state)\n",
+        "            action_mean = self.actor(state) #action_mean是一个向量，表示每个动作维度的均值。\n",
         "\n",
         "            # 协方差矩阵，用于表示多元高斯分布的方差：\n",
         "            # torch.diag(self.action_var)：生成一个对角矩阵，其对角线上的元素来自 self.action_var，非对角线元素为零。\n",
@@ -285,8 +285,11 @@
         "              # 这是因为多元高斯分布的协方差矩阵要求的形状是 (batch_size, n, n)，其中 n 是动作的维度。unsqueeze 让它符合这一形状。\n",
         "            cov_mat = torch.diag(self.action_var).unsqueeze(dim=0)\n",
         "\n",
-        "            # 1.MultivariateNormal：到这里了\n",
+        "            # 1.MultivariateNormal：用于在强化学习中生成符合多维正态分布的随机变量，特别是在连续动作空间的策略中。\n",
+        "            #\n",
         "            dist = MultivariateNormal(action_mean, cov_mat)\n",
+        "\n",
+        "        # 离散型\n",
         "        else:\n",
         "            action_probs = self.actor(state)\n",
         "            dist = Categorical(action_probs)\n",
@@ -327,7 +330,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 53,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -537,7 +540,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 38,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -975,7 +978,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 39,
+      "execution_count": null,
       "metadata": {
         "id": "UEy2qKdZF8ha"
       },
@@ -1005,7 +1008,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 40,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -1156,7 +1159,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 41,
+      "execution_count": null,
       "metadata": {
         "id": "n6IYC_JCGxlB"
       },
@@ -1187,7 +1190,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 42,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -1411,7 +1414,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 43,
+      "execution_count": null,
       "metadata": {
         "id": "YaWPRW9EGxgH"
       },
@@ -1446,7 +1449,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 44,
+      "execution_count": null,
       "metadata": {
         "id": "VL3tpKf3HLAq"
       },
@@ -1464,7 +1467,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 45,
+      "execution_count": null,
       "metadata": {
         "id": "j5Rx_IFKHK-D",
         "colab": {
