使用 Colab 创建而成

--- a/PPO_colab.ipynb
+++ b/PPO_colab.ipynb
@@ -286,18 +286,22 @@
         "            cov_mat = torch.diag(self.action_var).unsqueeze(dim=0)\n",
         "\n",
         "            # 1.MultivariateNormal：用于在强化学习中生成符合多维正态分布的随机变量，特别是在连续动作空间的策略中。\n",
-        "            #\n",
+        "            # 目前的简单理解就是将对于每个节点的动作概率分布绘制在一起快，从二维变成三维度\n",
         "            dist = MultivariateNormal(action_mean, cov_mat)\n",
         "\n",
         "        # 离散型\n",
         "        else:\n",
-        "            action_probs = self.actor(state)\n",
-        "            dist = Categorical(action_probs)\n",
+        "            action_probs = self.actor(state) #得到了softmax结果，每个类别的概率值\n",
+        "            dist = Categorical(action_probs) #构建离散概率分布\n",
         "\n",
-        "        action = dist.sample()\n",
-        "        action_logprob = dist.log_prob(action)\n",
+        "        # 你可能问为什么再次构建一次连续/离散的概率分布？\n",
+        "        # 因为利用MultivariateNormal/Categorical是已经定义好的类，封装好了很多如sample函数\n",
+        "\n",
+        "        action = dist.sample() #从分布中采样\n",
+        "        action_logprob = dist.log_prob(action) #它计算某个动作被选择的对数概率。\n",
         "        state_val = self.critic(state)\n",
         "\n",
+        "        # detach() 的作用是使得 action 张量不再参与后续的梯度计算，从而 防止它影响策略梯度的计算。\n",
         "        return action.detach(), action_logprob.detach(), state_val.detach()\n",
         "\n",
         "\n",
