使用 Colab 创建而成

--- a/PPO_colab.ipynb
+++ b/PPO_colab.ipynb
@@ -297,14 +297,17 @@
         "        # 你可能问为什么再次构建一次连续/离散的概率分布？\n",
         "        # 因为利用MultivariateNormal/Categorical是已经定义好的类，封装好了很多如sample函数\n",
         "\n",
-        "        action = dist.sample() #从分布中采样\n",
+        "        action = dist.sample() #从分布中采样（随机值采样）\n",
         "        action_logprob = dist.log_prob(action) #它计算某个动作被选择的对数概率。\n",
-        "        state_val = self.critic(state)\n",
+        "        state_val = self.critic(state)#计算上一时刻的reward\n",
         "\n",
-        "        # detach() 的作用是使得 action 张量不再参与后续的梯度计算，从而 防止它影响策略梯度的计算。\n",
+        "        # detach() 的作用是使得 action 张量不再参与后续的梯度计算，从而防止它影响策略梯度的计算。\n",
+        "        # 输入state 得到（action，critic，以及上一时刻的reward）\n",
         "        return action.detach(), action_logprob.detach(), state_val.detach()\n",
         "\n",
         "\n",
+        "    # 策略梯度方法：\n",
+        "    #\n",
         "    def evaluate(self, state, action):\n",
         "\n",
         "        if self.has_continuous_action_space:\n",
@@ -321,11 +324,17 @@
         "            action_probs = self.actor(state)\n",
         "            dist = Categorical(action_probs)\n",
         "\n",
+        "        # 对数概率：对数概率有助于在梯度计算时避免数值溢出问题（如非常小的概率值），并且方便在梯度优化中使用。\n",
+        "        # 计算在某状态下采取特定动作的概率的对数，常用于策略更新中的梯度计算。\n",
         "        action_logprobs = dist.log_prob(action)\n",
+        "\n",
+        "        # 策略熵：衡量策略的不确定性或随机性，帮助控制智能体的探索性，避免过早收敛。\n",
         "        dist_entropy = dist.entropy()\n",
+        "\n",
+        "        # 状态值：表示从当前状态开始，智能体期望获得的未来累计奖励，是强化学习中长期奖励的期望。\n",
         "        state_values = self.critic(state)\n",
         "\n",
-        "        return action_logprobs, state_values, dist_entropy"
+        "        return action_logprobs, state_values, dist_entropy\n"
       ],
       "metadata": {
         "id": "tkSOtPNom5fz",
@@ -354,20 +363,17 @@
       },
       "outputs": [],
       "source": [
-        "\n",
-        "\n",
-        "\n",
         "class PPO:\n",
         "    def __init__(self, state_dim, action_dim, lr_actor, lr_critic, gamma, K_epochs, eps_clip, has_continuous_action_space, action_std_init=0.6):\n",
         "\n",
         "        self.has_continuous_action_space = has_continuous_action_space\n",
         "\n",
         "        if has_continuous_action_space:\n",
-        "            self.action_std = action_std_init\n",
+        "            self.action_std = action_std_init #如果是连续动作空间，则设置初始的动作标准差，默认为 0.6。这个标准差用于多维高斯分布中，影响动作的分散度。\n",
         "\n",
         "        self.gamma = gamma\n",
-        "        self.eps_clip = eps_clip\n",
-        "        self.K_epochs = K_epochs\n",
+        "        self.eps_clip = eps_clip #存储裁剪因子，用于PPO算法中的策略更新裁剪，确保每次更新的幅度不会过大。\n",
+        "        self.K_epochs = K_epochs #存储每次策略更新时的迭代次数。\n",
         "\n",
         "        self.buffer = RolloutBuffer()\n",
         "\n",
@@ -377,6 +383,8 @@
         "                        {'params': self.policy.critic.parameters(), 'lr': lr_critic}\n",
         "                    ])\n",
         "\n",
+        "        #self.policy_old: 创建一个 旧的 ActorCritic 网络，用来保存策略的旧参数。在 PPO 算法中，\n",
+        "        # 旧策略用于计算目标函数，在每次更新时比较当前策略与旧策略的差异，以确保策略更新不超过允许的范围。\n",
         "        self.policy_old = ActorCritic(state_dim, action_dim, has_continuous_action_space, action_std_init).to(device)\n",
         "        self.policy_old.load_state_dict(self.policy.state_dict())\n",
         "\n",
@@ -447,6 +455,9 @@
         "        # Monte Carlo estimate of returns\n",
         "        rewards = []\n",
         "        discounted_reward = 0\n",
+        "        # zip()：函数用于将多个可迭代对象“压缩”成一个元组的迭代器。\n",
+        "        # 会将反向的rewards和is_terminals列表配对，生成一个包含(reward,is_terminal)元组的迭代器。\n",
+        "        # 每次循环，reward和is_terminal就分别从这两个列表中对应的位置取出。\n",
         "        for reward, is_terminal in zip(reversed(self.buffer.rewards), reversed(self.buffer.is_terminals)):\n",
         "            if is_terminal:\n",
         "                discounted_reward = 0\n",
@@ -889,13 +900,18 @@
         "# training loop\n",
         "while time_step <= max_training_timesteps:\n",
         "\n",
+        "    # initial every episode\n",
         "    state = env.reset()\n",
         "    current_ep_reward = 0\n",
         "\n",
+        "    # 时间步循环\n",
         "    for t in range(1, max_ep_len+1):\n",
         "\n",
         "        # select action with policy\n",
+        "        #（State1）-》（action1，critic1）\n",
         "        action = ppo_agent.select_action(state)\n",
+        "\n",
+        "        #（action1）-》（S2，Reward1）\n",
         "        state, reward, done, _ = env.step(action)\n",
         "\n",
         "        # saving reward and is_terminals\n",
